fix unwanted search button wrap with list filter

--- a/djangoql/static/css/djangoql_completion_admin.css
+++ b/djangoql/static/css/djangoql_completion_admin.css
@@ -1,3 +1,3 @@
 #changelist #toolbar form textarea#searchbar {
-  width: 85%;
+  width: 80%;
 }
